# nautobot-chatops-cookiecutter

./: .gitignore  .yamllint.yml  README.md  cookiecutter.json  pyproject.toml  tasks.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  examples.yml
examples/nautobot-plugin-chatops-my-plugin/: GETTING_STARTED.md  README.md  invoke.example.yml  pyproject.toml  tasks.py
examples/nautobot-plugin-chatops-my-plugin/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
examples/nautobot-plugin-chatops-my-plugin/development/: Dockerfile-mattermost  creds.example.env  docker-compose.base.yml  docker-compose.dev.yml  mattermost.env  nautobot_config.py
examples/nautobot-plugin-chatops-my-plugin/docs/: index.md
examples/nautobot-plugin-chatops-my-plugin/nautobot_plugin_chatops_my_plugin/: __init__.py  my_plugin.py  worker.py
examples/nautobot-plugin-chatops-my-plugin/nautobot_plugin_chatops_my_plugin/tests/: __init__.py  test_basic.py
hooks/: post_gen_project.py
tests/: test_bake_nautobot_chatops_plugin.py
{{ cookiecutter.project_slug }}/: GETTING_STARTED.md  README.md  invoke.example.yml  mkdocs.yml  pyproject.toml  tasks.py
{{ cookiecutter.project_slug }}/.github/ISSUE_TEMPLATE/: feature_request.md
{{ cookiecutter.project_slug }}/.github/workflows/: ci.yml  rebake.yaml
{{ cookiecutter.project_slug }}/development/: Dockerfile  docker-compose.base.yml  docker-compose.dev.yml  mattermost-docker-entry.sh  mattermost.env  nautobot_config.py
{{ cookiecutter.project_slug }}/docs/: index.md
{{ cookiecutter.project_slug }}/docs/admin/: compatibility_matrix.md  uninstall.md
{{ cookiecutter.project_slug }}/docs/dev/: dev_environment.md
{{ cookiecutter.project_slug }}/{{cookiecutter.plugin_name}}/: __init__.py  worker.py  {{ cookiecutter.chatops_interactive_command }}.py
{{ cookiecutter.project_slug }}/{{cookiecutter.plugin_name}}/tests/: test_basic.py
